# rust-blogpost

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/: 0001_create_blog_posts.sql
src/: main.rs  models.rs
src/handlers/: create.rs  mod.rs  retrieve.rs
templates/: index.html
