[package]
name = "blogpost"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
sqlx = { version = "0.8", features = [
  "runtime-tokio-native-tls",
  "postgres",
  "chrono",
] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
uuid = { version = "1.11", features = ["v4"] }
reqwest = "0.12"
askama = "0.12.1"
askama_axum = "0.4.0"
